--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -44,8 +44,8 @@
 }
 
 %link-hover {
-  color: #d2603a !important;
-  border-bottom: 1px solid #d2603a;
+  color: #ff79c6 !important;
+  border-bottom: 1px solid #ff79c6;
   text-decoration: none;
 }
 
