--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -18,13 +18,13 @@
   --blockquote-text-color: #6272a4;
   --link-color: #bd93f9;
   --link-underline-color: #ffb86c;
-  --button-bg: #50fa7b;
+  --button-bg: #ff79c6;
   --btn-border-color: #ff79c6;
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: #44475a;
   --btn-box-shadow: var(--main-bg);
   --card-header-bg: #44475a;
-  --checkbox-color: #50fa7b;
+  --checkbox-color: #ff79c6;
   --checkbox-checked-color: var(--link-color);
   --img-bg: radial-gradient(circle, #282a36 0%, #44475a 100%);
   --shimmer-bg: linear-gradient(
@@ -56,7 +56,7 @@
   /* Home page */
   --post-list-text-color: var(--text-color);
   --btn-patinator-text-color: var(--text-color);
-  --btn-paginator-hover-color: #50fa7b;
+  --btn-paginator-hover-color: #ff79c6;
 
   /* Posts */
   --toc-highlight: #ff79c6;
@@ -66,7 +66,7 @@
   --tb-border-color: var(--tb-odd-bg);
   --footnote-target-bg: #ff79c6;
   --btn-share-color: #ff79c6;
-  --btn-share-hover-color: #50fa7b;
+  --btn-share-hover-color: #ff79c6;
   --card-bg: #282a36;
   --card-hovor-bg: #6272a4;
   --card-shadow: rgba(21, 21, 21, 0.72) 0 6px 18px 0,
