--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -1,25 +1,26 @@
 /*
- * The syntax dark mode styles.
+ * The syntax dark mode styles (Dracula theme)
  */
 
-@mixin dark-syntax {
-  --language-border-color: #2d2d2d;
-  --highlight-bg-color: #151515;
-  --highlighter-rouge-color: #c9def1;
-  --highlight-lineno-color: #808080;
-  --inline-code-bg: rgba(255, 255, 255, 0.05);
-  --code-color: #b0b0b0;
-  --code-header-text-color: #6a6a6a;
-  --code-header-muted-color: #353535;
-  --code-header-icon-color: #565656;
-  --clipboard-checked-color: #2bcc2b;
-  --filepath-text-color: #cacaca;
+ @mixin dark-syntax {
+  /* 기본 배경 및 텍스트 색상 */
+  --language-border-color: #6272a4;
+  --highlight-bg-color: #282a36;
+  --highlighter-rouge-color: #f8f8f2;
+  --highlight-lineno-color: #6272a4;
+  --inline-code-bg: rgba(255, 255, 255, 0.08);
+  --code-color: #f8f8f2;
+  --code-header-text-color: #bd93f9;
+  --code-header-muted-color: #44475a;
+  --code-header-icon-color: #ff79c6;
+  --clipboard-checked-color: #50fa7b;
+  --filepath-text-color: #ffb86c;
 
   .highlight .gp {
-    color: #87939d;
+    color: #6272a4;
   }
 
-  /* --- Syntax highlight theme from `rougify style base16.dark` --- */
+  /* --- Syntax highlight theme for Dracula --- */
 
   .highlight table td {
     padding: 5px;
@@ -31,13 +32,13 @@
 
   .highlight,
   .highlight .w {
-    color: #d0d0d0;
-    background-color: #151515;
+    color: #f8f8f2;
+    background-color: #282a36;
   }
 
   .highlight .err {
-    color: #151515;
-    background-color: #ac4142;
+    color: #282a36;
+    background-color: #ff5555;
   }
 
   .highlight .c,
@@ -47,39 +48,39 @@
   .highlight .cpf,
   .highlight .c1,
   .highlight .cs {
-    color: #848484;
+    color: #6272a4;
   }
 
   .highlight .cp {
-    color: #f4bf75;
+    color: #ffb86c;
   }
 
   .highlight .nt {
-    color: #f4bf75;
+    color: #ffb86c;
   }
 
   .highlight .o,
   .highlight .ow {
-    color: #d0d0d0;
+    color: #f8f8f2;
   }
 
   .highlight .p,
   .highlight .pi {
-    color: #d0d0d0;
+    color: #f8f8f2;
   }
 
   .highlight .gi {
-    color: #90a959;
+    color: #50fa7b;
   }
 
   .highlight .gd {
-    color: #f08a8b;
-    background-color: #320000;
+    color: #ff5555;
+    background-color: #3b2d2d;
   }
 
   .highlight .gh {
-    color: #6a9fb5;
-    background-color: #151515;
+    color: #8be9fd;
+    background-color: #282a36;
     font-weight: bold;
   }
 
@@ -88,19 +89,19 @@
   .highlight .kp,
   .highlight .kr,
   .highlight .kv {
-    color: #aa759f;
+    color: #ff79c6;
   }
 
   .highlight .kc {
-    color: #d28445;
+    color: #ffb86c;
   }
 
   .highlight .kt {
-    color: #d28445;
+    color: #ffb86c;
   }
 
   .highlight .kd {
-    color: #d28445;
+    color: #ffb86c;
   }
 
   .highlight .s,
@@ -112,39 +113,39 @@
   .highlight .sh,
   .highlight .sx,
   .highlight .s1 {
-    color: #90a959;
+    color: #f1fa8c;
   }
 
   .highlight .sa {
-    color: #aa759f;
+    color: #ff79c6;
   }
 
   .highlight .sr {
-    color: #75b5aa;
+    color: #8be9fd;
   }
 
   .highlight .si {
-    color: #b76d45;
+    color: #bd93f9;
   }
 
   .highlight .se {
-    color: #b76d45;
+    color: #bd93f9;
   }
 
   .highlight .nn {
-    color: #f4bf75;
+    color: #50fa7b;
   }
 
   .highlight .nc {
-    color: #f4bf75;
+    color: #50fa7b;
   }
 
   .highlight .no {
-    color: #f4bf75;
+    color: #50fa7b;
   }
 
   .highlight .na {
-    color: #6a9fb5;
+    color: #8be9fd;
   }
 
   .highlight .m,
@@ -155,10 +156,18 @@
   .highlight .il,
   .highlight .mo,
   .highlight .mx {
-    color: #90a959;
+    color: #bd93f9;
   }
 
   .highlight .ss {
-    color: #90a959;
+    color: #50fa7b;
+  }
+
+  .highlight .nf {
+    color: #50fa7b;
+  }
+
+  .highlight .fm {
+    color: #50fa7b;
   }
 }
