style: adapt #ff79c6 to btn-outline-primary

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -20,6 +20,7 @@
   --link-underline-color: #ffb86c;
   --button-bg: #ff79c6;
   --btn-border-color: #ff79c6;
+  --btn-outline-primary: #ff79c6;
   --btn-backtotop-color: var(--text-color);
   --btn-backtotop-border-color: #44475a;
   --btn-box-shadow: var(--main-bg);
@@ -143,5 +144,16 @@
   /* stylelint-disable-next-line selector-id-pattern */
   #disqus_thread {
     color-scheme: none;
+  }
+
+  /* Bootstrap 버튼 재정의 */
+  .btn-outline-primary {
+    color: var(--btn-outline-primary);
+    border-color: var(--btn-outline-primary);
+
+    &:hover {
+      background-color: var(--btn-outline-primary);
+      color: #fff; /* 혹은 원하는 텍스트 색상 */
+    }
   }
 } /* dark-scheme */
