style: update theme more like dracula style

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -629,7 +629,7 @@ main {
 /* Overwrite bootstrap outline button */
 .btn.btn-outline-primary {
   &:not(.disabled):hover {
-    border-color: #007bff !important;
+    border-color: #ff79c6 !important;
   }
 }
 
